--- a/src/properties/database.properties
+++ b/src/properties/database.properties
@@ -1,4 +1,7 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://98.131.1.215:3306/icmcon_main
-jdbc.username=icmcom_su
-jdbc.password=Hebrews12:1
+#jdbc.url=jdbc:mysql://98.131.1.215:3306/icmcon_main
+#jdbc.username=icmcom_su
+#jdbc.password=Hebrews12:1
+jdbc.url=jdbc:mysql://localhost:3306/icm
+jdbc.username=root
+jdbc.password=root
