--- a/src/properties/global.properties
+++ b/src/properties/global.properties
@@ -1,3 +1,20 @@
+header.welcomeText=Welcome
+header.forget.uname.form.text=Please enter user name
+header.forget.email.form.text=Please enter register email address
+Sign.Up=Sign Up
+My.Account =My Account 
+slogan=Enlighten...Enrich...Edify...
+choose.lang=Select Language:
+title=Indian Christian Media
+login=Login
+forget.text=Forgot your password?
+signup.text=No account yet? Sign up!
+image.of.day.text=Image of the Day
+Latest.Video=Latest Video
+Latest.Music=Latest Music
+submit=Submit
+About.Us=About Us
+about.us.text=Indian Christian Media is a ministry of ICCOV (Indian Community Church of the Valley) and is built around fresh, relevant content that focuses on educating our Internet audience and assisting them in their quest to strengthen their relationship with God.Our vision is to proclaim the message of salvation to everyone across the globe with	the love of Christ. We provide audio and video resources, news, articles, and other resources to help believers in Jesus with their	spiritual growth and for unbelievers a starting point in their quest to know about God. Joevin studios in chennai partners in all our endeavors and we can only wait and see what God does through our 	partnership for His Glory. We are lead by Pastor John Sathri's vision to reach the ends of the world, in all available and possible means and to take the good news of Jesus Christ to our unbelieving family and friends.Team consists of Muthukumar Selvadurai, Sam Selvan, Joseph (ZealforGod.com) and Joevin who round the clock work to keep the website updated.
 error.content.unavailable=Content unavailable.
 i18ntext=this is english
 promotional.content.unavailable=Content unavailable.
